crates/strider-analyze/tests/snapshots/v3__x86_kernel__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" -> "5" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "14" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "21" [label="φ XMM0", shape=house, fillcolor="#163030"];
  "14" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v22" [color="#888888", style=dashed];
  "v22" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v23" [color="#888888", style=dashed];
  "v23" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "24" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "15" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" -> "15" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[2] ← ECX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="arg[3] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x401278:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "29" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "31" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="φ ST0", shape=house, fillcolor="#163030"];
  "14" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v35" [color="#888888", style=dashed];
  "v35" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v36" [color="#888888", style=dashed];
  "v36" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="φ EDX", shape=house, fillcolor="#163030"];
  "14" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v37" [color="#888888", style=dashed];
  "v37" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v38" [color="#888888", style=dashed];
  "v38" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="φ ESI", shape=house, fillcolor="#163030"];
  "14" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="φ Mem", shape=house, fillcolor="#163030"];
  "14" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "5" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "26" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v43" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v43" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x401268:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "11" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
